[project]
name = "climbalytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pymorphy2>=0.9.1",
    "pymorphy2-dicts-ru>=2.4",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=80.9.0",
]
